t/batch/directives/invalid/expected/001-invalid-directive.pattern
ValueError: line 6: orphan 'FLUX:' detected: directives disabled after line 4
